Changes done for v2

--- a/uimodule/webapp/index.html
+++ b/uimodule/webapp/index.html
@@ -12,7 +12,7 @@
             src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-resourceroots='{
-        "com.infocus.TimeApproval": "./"
+        "com.infocus.TimeApprovalV2": "./"
       }'
             data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-compatVersion="edge"
@@ -24,9 +24,9 @@
     <body class="sapUiBody">
         <div
             data-sap-ui-component
-            data-name="com.infocus.TimeApproval"
+            data-name="com.infocus.TimeApprovalV2"
             data-id="container"
-            data-settings='{"id" : "TimeApproval"}'
+            data-settings='{"id" : "TimeApprovalV2"}'
         ></div>
     </body>
 </html>
